--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_delete_all"
         android:orderInCategory="100"
-        android:title="Delete All"
+        android:title="Delete all"
         app:showAsAction="never" />
 </menu>
